--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,6 +1,6 @@
 html
     head
-        title 제목을을을을 입력하세요
+        title 2021년 퇴원손상심층조사 결과보고회
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet")
         script(src="https://code.jquery.com/jquery-1.11.3.min.js")
