--- a/src/views/admin.pug
+++ b/src/views/admin.pug
@@ -2,8 +2,8 @@ extends layout.pug
 
 block contents 
     div.p-8
-        h1.text-4xl.font-bold.text-center.mt-8 관리자 화면 입니다 👋
-    table(class="w-2/3").table-auto.mx-auto
+        h1.text-4xl.font-bold.text-center.mt-8 관리자 화면
+    table(class="w-1/2").table-auto.mx-auto
         thead.text-3xl 
             tr 
                 th ID 
@@ -13,8 +13,11 @@ block contents
         tbody 
         each log in logs
             tr 
-                th.pt-4 #{log.id}
-                th.pt-4 #{log.name}
-                th.pt-4 #{log.accessNum}
-                th.pt-4 #{log.lastAccess}
+                th.pt-4 #{log.ID}
+                th.pt-4 #{log.NAME}
+                th.pt-4 #{log.ACCESSNUM}
+                th.pt-4 #{log.LASTACCESS}
+
+    button.primary-btn.red-btn.mt-8.mx-auto(onclick="location.href='/export'") csv출력
+
 block scripts
