--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -5,6 +5,7 @@ html
         link(href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet")
         script(src="https://code.jquery.com/jquery-1.11.3.min.js")
         link(rel="stylesheet", href="public/index.css")
+        block head
     body
         block contents 
         block scripts
