--- a/src/public/index.css
+++ b/src/public/index.css
@@ -75,3 +75,21 @@
 .test {
   color: red;
 }
+#table {
+  width: 50%;
+}
+
+@media (max-width: 1024px) {
+  #table {
+    width: 80%;
+  }
+}
+@media (max-width: 480px) {
+  #table {
+    width: 100%;
+  }
+  .text-3xl {
+    font-size: 1.25rem;
+    line-height: 2.25rem;
+  }
+}
