--- a/src/views/question.pug
+++ b/src/views/question.pug
@@ -4,7 +4,7 @@ block contents
     div.p-8.flex.justify-center
         h1.text-4xl.font-bold.text-center.mt-8 질의 응답
         //- button.primary-btn.red-btn.mt-8.ml-4(onclick="location.href='/export'") csv출력
-    table(class="w-1/2").table-auto.mx-auto
+    table(class="w-4/5").table-auto.mx-auto
         thead.text-3xl 
             tr
                 th.pb-4  이름
@@ -16,3 +16,4 @@ block contents
                     th.p-4 #{question.CONTEXT}
 
 block scripts
+    script(type='text/javascript' src='../public/question.js')
