--- a/src/views/admin.pug
+++ b/src/views/admin.pug
@@ -4,7 +4,7 @@ block contents
     div.p-8.flex.justify-center
         h1.text-4xl.font-bold.text-center.mt-8 관리자 화면
         button.primary-btn.red-btn.mt-8.ml-4(onclick="location.href='/export'") csv출력
-    div.overflow-x-auto
+    div.overflow-x-auto.mb-40
         table#table.table-auto.mx-auto
             thead.text-3xl 
                 tr 
