--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -21,12 +21,12 @@
         style="max-width: 1000px"
       >
         <div class="md:flex w-full">
-          <div class="hidden md:block w-1/2 bg-indigo-500 py-10 px-10">
-            <img src="images/main-logo.svg" alt="" srcset="" />
+          <div class="hidden md:flex w-1/2 bg-indigo-500 p-10 flex-nowrap content-center">
+              <img src="images/main-logo.svg" alt="" srcset="" />
           </div>
-          <div class="w-full md:w-1/2 py-10 px-5 md:px-10">
+          <div class="w-full flex-col md:w-1/2 py-10 px-5 md:px-10">
             <div class="text-center mb-10">
-              <h1 class="font-bold text-3xl text-gray-900">사전등록</h1>
+              <h1 class="font-bold text-3xl mb-3 text-gray-900">사전등록</h1>
               <p>사전등록을 위해 정확한 정보를 입력해주세요</p>
             </div>
             <div>
@@ -39,11 +39,25 @@
                         person_outline
                         </span>
                     </div>
-                    <input type="text" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2  border-gray-200 outline-none focus:border-indigo-500 required:border-red-500 " placeholder="홍길동" name="name"/>
+                    <input type="text" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2  border-gray-200 outline-none focus:border-indigo-500 required:border-red-500" placeholder="홍길동" name="name"/>
                   </div>
                 </div>
                 </div>
               </div>
+              <div class="flex -mx-3">
+                <div class="w-full px-3 mb-5">
+                  <label for="" class="text-xs font-semibold px-1">소속</label>
+                  <div class="flex">
+                    <div class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center">
+                      <span class="material-icons-outlined text-gray-400">
+                        work
+                        </span>
+                    </div>
+                    <input type="text" class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2  border-gray-200 outline-none focus:border-indigo-500 required:border-red-500 " placeholder="소속을 입력하세요" name="belong"/>
+                  </div>
+                </div>
+              </div>
+              
               <div class="flex -mx-3">
                 <div class="w-full px-3 mb-5">
                   <label for="" class="text-xs font-semibold px-1">이메일</label>
@@ -64,7 +78,7 @@
                 </div>
               </div>
               <div class="flex -mx-3">
-                <div class="w-full px-3 mb-12">
+                <div class="w-full px-3 mb-6">
                   <label for="" class="text-xs font-semibold px-1"
                     >비밀번호</label
                   >
@@ -84,7 +98,8 @@
                   </div>
                 </div>
               </div>
-              <div class="flex -mx-3">
+              <div class="flex -mx-3 flex-col text-center">
+                <a class="mb-6" href="http://example.com" target="_blank">개인정보 처리 및 보호방침</a>
                 <div class="w-full px-3 mb-5">
                   <button id="submitBtn"
                     class="block w-full max-w-xs mx-auto bg-indigo-500 hover:bg-indigo-700 focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold"
