admin-page 만드는중

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -93,4 +93,17 @@
     </div>
   </body>
   <script src="js/login.js"></script>
+  <script>
+    /* $('input[name=email]').keypress(function (key) {
+      if (key.keyCode == 13) {
+        $('#submitBtn').click()
+      }
+    })
+
+    $('input[name=password]').keypress(function (key) {
+      if (key.keyCode == 13) {
+        $('#submitBtn').click()
+      }
+    }) */
+  </script>
 </html>
