--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>식약처 Live Stream</title>
+    <title>2021 퇴원손상 심층조사 결과보고회</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <link rel="stylesheet" href="css/home.css" />
     <meta
@@ -21,7 +21,7 @@
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/eihUpY26Cjg?controls=0"
+              src="https://www.youtube.com/embed/AdUw5RdyZxI?controls=0"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -38,9 +38,7 @@
             </div>
             <div class="info-title">
               <div class="info-text">
-                <div class="title">
-                  2021년 퇴원손상 심층조사 결과보고회 세부일정
-                </div>
+                <div class="title">2022년 냥펀스튜디오 결과보고회</div>
                 <div class="lastopen"></div>
               </div>
             </div>
@@ -55,7 +53,7 @@
             <div class="contents">
               <a class="content" href="#">
                 <i class="fas fa-link"></i>
-                <div>2021년 퇴원손상심층조사 결과보고회-발표집</div>
+                <div>2022년 냥펀스튜디오 결과보고회-발표집</div>
               </a>
             </div>
           </div>
@@ -67,39 +65,33 @@
                 <div class="title">개회사, 축사, 인사말씀</div>
                 <div class="time">13:20 ~ 13:50</div>
                 <div class="people">
-                  김현주 차장 (질병관리청)<br />
-                  이강현 협회장 (대한외상소생협회)<br />
-                  강성홍 협회장 (대한보건의료정보관리사협회)<br />
-                  조은희 국장 (질병관리청 건강위해대응관)
+                  김냥펀 차장 (@@@청)<br />
+                  이엔펀 협회장 (대한 @@@ 협회)<br />
+                  @@@ 협회장 (### 협회)<br />
+                  @@@ 국장 (@@@청)
                 </div>
               </div>
               <div class="time-form">
-                <div class="title">2021년도 퇴원손상심층조사 사업 경과보고</div>
+                <div class="title">2021년도 @@@ 사업 경과보고</div>
                 <div class="time">13:50 ~ 14:10</div>
-                <div class="people">
-                  권상희 과장<br />(질병관리청 손상예방관리과)
-                </div>
+                <div class="people">@@@ 과장<br />(@@@청 @@@과)</div>
               </div>
               <div class="time-form">
-                <div class="title">손상예방 전략 수립을 위한 조사체계 강화</div>
+                <div class="title">@@@ 전략 수립을 위한 @@@ 강화</div>
                 <div class="time">14:10 ~ 14:30</div>
-                <div class="people">박혜숙 교수<br />(이화여대의과대학)</div>
+                <div class="people">@@@ 교수<br />(@@@대학)</div>
               </div>
               <div class="time-form">
-                <div class="title">국가손상감시체계 발전 방안</div>
+                <div class="title">@@@ 발전 방안</div>
                 <div class="time">14:30 ~ 14:50</div>
-                <div class="people">
-                  송경준 교수<br />(서울특별시 보라매병원)
-                </div>
+                <div class="people">@@@ 교수<br />(서울특별시 @@@)</div>
               </div>
               <div class="time-form">
                 <div class="title">
-                  2021년도 표본병원 담당자 교육과정 운영 경과보고
+                  2021년도 @@@ 담당자 교육과정 운영 경과보고
                 </div>
                 <div class="time">14:50 ~ 15:10</div>
-                <div class="people">
-                  황규연 부회장<br />(대한보건의료정보관리사협회)
-                </div>
+                <div class="people">@@@ 부회장<br />(대한@@@협회)</div>
               </div>
             </div>
           </div>
