--- a/src/views/home2.ejs
+++ b/src/views/home2.ejs
@@ -48,7 +48,7 @@
                                 <i class="fas fa-tasks pr-0 md:pr-3"></i
                                 ><span
                                 class="pb-1 md:pb-0 text-xs md:text-base text-gray-400 md:text-gray-200 block md:inline-block"
-                                >사전등록 신청자</span
+                                >개설 준비중</span
                                 >
                             </a>
                             </li>
@@ -60,7 +60,7 @@
                                 <i class="fa fa-envelope pr-0 md:pr-3"></i
                                 ><span
                                 class="pb-1 md:pb-0 text-xs md:text-base text-gray-400 md:text-gray-200 block md:inline-block"
-                                >로그인한 사용자</span
+                                >개설 준비중</span
                                 >
                             </a>
                             </li>
@@ -104,10 +104,10 @@
                                         </div>
                                         <div class="flex-1 text-right md:text-center">
                                         <h2 class="font-bold uppercase text-gray-600">
-                                            어쩌고저쩌고1
+                                            총 조회수
                                         </h2>
                                         <p class="font-bold text-3xl">
-                                            153153
+                                            2456
                                             <span class="text-green-500"
                                             ><i class="fas fa-caret-up"></i
                                             ></span>
@@ -130,10 +130,10 @@
                                         </div>
                                         <div class="flex-1 text-right md:text-center">
                                             <h2 class="font-bold uppercase text-gray-600">
-                                                저쩌고2
+                                                사전등록 신청자
                                             </h2>
                                             <p class="font-bold text-3xl">
-                                                249
+                                                149
                                                 <span class="text-pink-500">
                                                     <i class="fas fa-exchange-alt"></i>
                                                 </span>
@@ -156,10 +156,10 @@
                                         </div>
                                         <div class="flex-1 text-right md:text-center">
                                             <h2 class="font-bold uppercase text-gray-600">
-                                                질문
+                                                추가 신청자
                                             </h2>
                                             <p class="font-bold text-3xl">
-                                                2
+                                                23
                                                 <span class="text-yellow-600"
                                                 ><i class="fas fa-caret-up"></i
                                                 ></span>
@@ -184,7 +184,7 @@
                                             <h2 class="font-bold uppercase text-gray-600">
                                                 업타임
                                             </h2>
-                                            <p class="font-bold text-3xl">6:42</p>
+                                            <p class="font-bold text-3xl">16:42</p>
                                         </div>
                                     </div>
                                 </div>
@@ -223,7 +223,7 @@
                                         </div>
                                     </div>
                                     <div class="flex-1 text-right md:text-center">
-                                        <h2 class="font-bold uppercase text-gray-600">어쩌고44</h2>
+                                        <h2 class="font-bold uppercase text-gray-600">강의질문</h2>
                                         <p class="font-bold text-3xl">
                                             3
                                             <span class="text-red-500"
