--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -8,8 +8,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp">
-
+    <link rel="stylesheet" href="../public/css/login_register.css">
     <title><%= title %> </title>
+  
   </head>
   <body>
 
@@ -21,13 +22,13 @@
         style="max-width: 1000px"
       >
         <div class="md:flex w-full">
-          <div class="hidden md:flex w-1/2 bg-indigo-500 p-10 flex-nowrap content-center">
-              <img src="images/main-logo.svg" alt="" srcset="" />
+          <div class="hidden md:flex w-1/2 bg-white p-10 flex-nowrap content-center">
+              <img src="images/test-logo.png" alt="" srcset="" class="object-contain"/>
           </div>
           <div class="w-full flex-col md:w-1/2 py-10 px-5 md:px-10">
             <div class="text-center mb-10">
-              <h1 class="font-bold text-3xl mb-3 text-gray-900">사전등록</h1>
-              <p>사전등록을 위해 정확한 정보를 입력해주세요</p>
+              <h1 class="font-bold text-3xl mb-3 text-gray-900"><%= header %></h1>
+              <p><%= header %>을 위해 정확한 정보를 입력해주세요</p>
             </div>
             <div>
               <div class="flex -mx-3">
@@ -98,7 +99,10 @@
                   </div>
                 </div>
               </div>
-              <div class="flex -mx-3 flex-col text-center">
+              <div class="w-full px-3 mt-4 text-center">
+                <a href="/login"><h5>로그인 하러 가기</h5></a>
+              </div>
+              <div class="flex -mx-3 flex-col text-center mt-4">
                 <a class="mb-6" href="http://example.com" target="_blank">개인정보 처리 및 보호방침</a>
                 <div class="w-full px-3 mb-5">
                   <button id="submitBtn"
