--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>2021 퇴원손상 심층조사 결과보고회</title>
+    <title>2022년 보건의료정보관리자 및 교수 워크숍</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
     <link rel="stylesheet" href="css/home.css" />
     <meta
@@ -38,7 +38,9 @@
             </div>
             <div class="info-title">
               <div class="info-text">
-                <div class="title">2022년 냥펀스튜디오 결과보고회</div>
+                <div class="title">
+                  2022년 보건의료정보관리자 및 교수 워크숍
+                </div>
                 <div class="lastopen"></div>
               </div>
             </div>
@@ -49,49 +51,136 @@
         <div class="reference">
           <div class="title">참고 자료</div>
           <div class="group">
-            <div class="title">링크</div>
+            <div class="title">다운로드</div>
             <div class="contents">
-              <a class="content" href="#">
+              <a class="content" href="/download">
                 <i class="fas fa-link"></i>
-                <div>2022년 냥펀스튜디오 결과보고회-발표집</div>
+                <div>일정표</div>
               </a>
             </div>
           </div>
+          <div class="title">일정표</div>
           <div class="group">
-            <div class="title">일정표</div>
             <div class="time-table">
-              <div class="time-group">1부. 개회 및 경과보고</div>
+              <div class="time-group">등 록</div>
               <div class="time-form">
-                <div class="title">개회사, 축사, 인사말씀</div>
-                <div class="time">13:20 ~ 13:50</div>
-                <div class="people">
-                  김냥펀 차장 (@@@청)<br />
-                  이엔펀 협회장 (대한 @@@ 협회)<br />
-                  @@@ 협회장 (### 협회)<br />
-                  @@@ 국장 (@@@청)
-                </div>
+                <div class="title">등록 (접속)</div>
+                <div class="time">09:00 ~ 09:20</div>
               </div>
+              <div class="time-group">개 회 식</div>
               <div class="time-form">
-                <div class="title">2021년도 @@@ 사업 경과보고</div>
-                <div class="time">13:50 ~ 14:10</div>
-                <div class="people">@@@ 과장<br />(@@@청 @@@과)</div>
+                <div class="title">개회식</div>
+                <div class="time">09:20 ~ 09:30</div>
               </div>
+              <div class="time-group">교 육 일 정</div>
               <div class="time-form">
-                <div class="title">@@@ 전략 수립을 위한 @@@ 강화</div>
-                <div class="time">14:10 ~ 14:30</div>
-                <div class="people">@@@ 교수<br />(@@@대학)</div>
-              </div>
-              <div class="time-form">
-                <div class="title">@@@ 발전 방안</div>
-                <div class="time">14:30 ~ 14:50</div>
-                <div class="people">@@@ 교수<br />(서울특별시 @@@)</div>
+                <div class="title">팀장 리더십 - 팀원 동기부여 방법 -</div>
+                <div class="time">09:30 ~ 10:50</div>
+                <div class="people">• 유경철<br />(소통과 공감 대표)</div>
               </div>
               <div class="time-form">
                 <div class="title">
-                  2021년도 @@@ 담당자 교육과정 운영 경과보고
+                  국내외 ICD 11 적용 개요 및 회원 역량 강화 방안
                 </div>
-                <div class="time">14:50 ~ 15:10</div>
-                <div class="people">@@@ 부회장<br />(대한@@@협회)</div>
+                <div class="time">10:50 ~ 11:20</div>
+                <div class="people">
+                  • 백설경<br />(아주대학교병원 보건의료정보팀 팀장)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">ICD 11의 구조 분석, KCD 적용 시 연계</div>
+                <div class="time">11:20 ~ 11:40</div>
+                <div class="people">
+                  황규연<br />(부산대학교병원 빅데이터팀)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">ICD 11 FT 결과와 팀원 역량 개발 방향</div>
+                <div class="time">11:40 ~ 12:00</div>
+                <div class="people">
+                  조윤정<br />(중앙대학교병원 의무기록팀 팀장)
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="time-table">
+              <div class="time-group">점 심 식 사</div>
+              <div class="time-form">
+                <div class="title text-center">12:00 ~ 13:10</div>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="time-table">
+              <div class="time-group">교 육 일 정</div>
+              <div class="time-form">
+                <div class="title">
+                  EMR 인증제도‧기준 개선 및 건강보험수가 신설 추진 방향
+                </div>
+                <div class="time">13:10 ~ 13:50</div>
+                <div class="people">
+                  김유미<br />
+                  (한국보건의료정보원 EMR기준개발부 부장)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">
+                  응급의료기관평가와 건강보험 수가, 평가 지표 관리 방향
+                </div>
+                <div class="time">13:50 ~ 14:20</div>
+                <div class="people">
+                  조혜경<br />(국립중앙의료원 응급의료평가질향상팀 팀장)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">
+                  4주기 의료기관인증평가 개정 내용과 의무기록 및 데이터 관리
+                  방향
+                </div>
+                <div class="time">14:20 ~ 14:50</div>
+                <div class="people">김선자<br />(서울아산병원 AGS실 부장)</div>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="time-table">
+              <div class="time-group">커피 브레이크</div>
+              <div class="time-form">
+                <div class="title text-center">14:50 ~ 15:10</div>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="time-table">
+              <div class="time-group">교 육 일 정</div>
+              <div class="time-form">
+                <div class="title">
+                  경영지원 및 조직 관리를 위한 EMR의 기준정보 관리
+                </div>
+                <div class="time">15:10 ~ 16:00</div>
+                <div class="people">
+                  류순옥<br />
+                  (충남대학교병원 의무기록팀 팀장)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">
+                  평가 지표 중심의 데이터 관리 직무 전환과 팀원 관리 전략
+                </div>
+                <div class="time">16:00 ~ 16:50</div>
+                <div class="people">
+                  이희원<br />
+                  (대한보건의료정보관리사협회 보건의료정보연구소 소장)
+                </div>
+              </div>
+              <div class="time-form">
+                <div class="title">개인정보보호법 개정안 주요 내용</div>
+                <div class="time">16:50 ~ 17:30</div>
+                <div class="people">
+                  이병남<br />
+                  (개인정보보호위원회 개인정보보호정책과 과장)
+                </div>
               </div>
             </div>
           </div>
