--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -7,10 +7,13 @@
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
     />
+
+    <link rel="stylesheet" href="css/login_register.css" />
 
     <title><%= title %></title>
   </head>
@@ -38,66 +41,64 @@
           >
             <div class="text-center mb-10">
               <h1 class="font-bold text-3xl mb-3 text-gray-900">로그인</h1>
-              <p>사전등록 때 입력하신 정보를 입력해주세요</p>
             </div>
             <div class="flex -mx-3">
               <div class="w-full px-3 mb-4">
-                <label for="" class="text-xs font-semibold px-1">이메일</label>
-                <div class="flex">
-                  <div
-                    class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
-                  >
-                    <span class="material-icons-outlined text-gray-400">
-                      email
-                    </span>
-                  </div>
-                  <input
-                    type="email"
-                    name="email"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500 required:border-red-500"
-                    placeholder="gildong@email.com"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="flex -mx-3">
-              <div class="w-full px-3 my-4">
                 <label for="" class="text-xs font-semibold px-1"
-                  >비밀번호</label
+                  >등록번호</label
                 >
                 <div class="flex">
                   <div
                     class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
                   >
-                    <span class="material-icons-outlined text-gray-400">
-                      lock
-                    </span>
+                    <span class="material-icons-outlined"> lock </span>
                   </div>
                   <input
-                    type="password"
-                    name="password"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-indigo-500 required:border-red-500"
-                    placeholder="************"
+                    type="text"
+                    name="account"
+                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300 required:border-red-300"
+                    placeholder="등록번호를 입력해주세요"
                   />
                 </div>
               </div>
             </div>
-            <div class="w-full px-3 mt-4 text-center">
-              <a href="/register"><h5>참가신청</h5></a>
-            </div>
-            <div class="w-full px-3 mt-4 text-center">
-              <h5 id="reset-password" class="cursor-pointer">
-                비밀번호 초기화
-              </h5>
+            <div class="flex -mx-3">
+              <div class="w-full px-3 mb-4">
+                <label for="" class="text-xs font-semibold px-1">성함</label>
+                <div class="flex">
+                  <div
+                    class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
+                  >
+                    <span class="material-icons-outlined text-gray-400">
+                      account_circle
+                    </span>
+                  </div>
+                  <input
+                    type="text"
+                    name="name"
+                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300 required:border-red-300"
+                    placeholder="성함을 입력해주세요"
+                  />
+                </div>
+              </div>
             </div>
             <div class="flex -mx-3 flex-col text-center">
               <div class="w-full px-3 mt-4 mb-4">
                 <button
                   id="submitBtn"
-                  class="block w-full max-w-xs mx-auto bg-indigo-500 hover:bg-indigo-700 focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold"
+                  class="block w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-lg px-3 py-3 font-semibold"
+                  data-tooltip-target="tooltip-default"
                 >
                   입장하기
                 </button>
+                <div
+                  id="tooltip-default"
+                  role="tooltip"
+                  class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-white bg-gray-900 rounded-lg shadow-sm opacity-0 transition-opacity duration-300 tooltip dark:bg-gray-700"
+                >
+                  Tooltip content
+                  <div class="tooltip-arrow" data-popper-arrow></div>
+                </div>
               </div>
             </div>
           </div>
@@ -106,17 +107,4 @@
     </div>
   </body>
   <script src="js/login.js"></script>
-  <script>
-    /* $('input[name=email]').keypress(function (key) {
-      if (key.keyCode == 13) {
-        $('#submitBtn').click()
-      }
-    })
-
-    $('input[name=password]').keypress(function (key) {
-      if (key.keyCode == 13) {
-        $('#submitBtn').click()
-      }
-    }) */
-  </script>
 </html>
