--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -27,14 +27,9 @@
       >
         <div class="md:flex w-full">
           <div
-            class="hidden md:flex w-1/2 bg-white flex-nowrap content-center p-10"
+            class="hidden md:flex w-1/2 bg-white flex-nowrap justify-center p-10 items-center"
           >
-            <img
-              src="images/test-logo.png"
-              alt=""
-              srcset=""
-              style="object-fit: cover"
-            />
+            <img src="images/khima.png" alt="" srcset="" class="logo-img" />
           </div>
           <div
             class="w-full md:w-1/2 py-10 px-5 md:px-10 flex-col justify-between"
@@ -44,7 +39,7 @@
             </div>
             <div class="flex -mx-3">
               <div class="w-full px-3 mb-4">
-                <label for="" class="text-xs font-semibold px-1"
+                <label for="" class="text-base font-semibold px-1"
                   >등록번호</label
                 >
                 <div class="flex">
@@ -56,7 +51,7 @@
                   <input
                     type="text"
                     name="account"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300 required:border-red-300"
+                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
                     placeholder="등록번호를 입력해주세요"
                   />
                 </div>
@@ -64,7 +59,7 @@
             </div>
             <div class="flex -mx-3">
               <div class="w-full px-3 mb-4">
-                <label for="" class="text-xs font-semibold px-1">성함</label>
+                <label for="" class="text-base font-semibold px-1">성함</label>
                 <div class="flex">
                   <div
                     class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
@@ -86,7 +81,7 @@
               <div class="w-full px-3 mt-4 mb-4">
                 <button
                   id="submitBtn"
-                  class="block w-full mx-auto text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-lg px-3 py-3 font-semibold"
+                  class="block w-full mx-auto text-white hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-lg px-3 py-3 font-semibold"
                   data-tooltip-target="tooltip-default"
                 >
                   입장하기
