--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -14,6 +14,8 @@
     ></script>
   </head>
   <body>
+    <div id="mask">
+    </div>
     <div class="container">
       <div class="frame">
         <div class="video-info">
