--- a/src/views/home2.ejs
+++ b/src/views/home2.ejs
@@ -8,6 +8,7 @@
         <meta name="description" content="description here" />
         <meta name="keywords" content="keywords,here" />
         <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <link rel="stylesheet" href="css/home.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link
@@ -30,7 +31,9 @@
         <title><%= title %></title>
     </head>
 
-    <body class="bg-gray-800 font-sans leading-normal tracking-normal">
+    <body class="bg-gray-800 leading-normal tracking-normal">
+        <div id="mask">
+        </div>
         <main>
             <div class="flex flex-col md:flex-row">
                 <nav aria-label="alternative nav">
@@ -87,7 +90,7 @@
                             <div
                                 class="rounded-tl-3xl bg-gradient-to-r from-blue-900 to-gray-800 p-4 shadow text-2xl text-white"
                             >
-                                <h1 class="font-bold pl-2">분석</h1>
+                                <h1 class="font-bold pl-2">관리자 페이지</h1>
                             </div>
                         </div>
 
@@ -131,7 +134,7 @@
                                         </div>
                                         <div class="flex-1 text-right md:text-center">
                                             <h2 class="font-bold uppercase text-gray-600">
-                                                사전등록 신청자
+                                                총 등록인원
                                             </h2>
                                             <p class="font-bold text-3xl">
                                                 149
@@ -237,7 +240,7 @@
                         </div>
                     </div>
                     <div class="flex flex-row flex-wrap flex-grow mt-2">
-                        <div class="w-full md:w-1/2 xl:w-1/2 p-6">
+                        <div class="w-full p-6">
                             <div class="bg-white border-transparent rounded-lg shadow-xl">
                                 <div class="bg-gradient-to-b from-gray-300 to-gray-100 uppercase text-gray-800 border-b-2 border-gray-300 rounded-tl-lg rounded-tr-lg">
                                     <h2 class="font-bold uppercase text-gray-600 px-6 py-3">사전신청</h2>
