--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -6,20 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
+    <link rel="stylesheet" href="css/login_register.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp"
     />
 
-    <link rel="stylesheet" href="css/login_register.css" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <title><%= title %></title>
   </head>
   <body>
+    <div id="mask">
+      <img src="" alt="" />
+    </div>
     <div
-      class="min-w-screen min-h-screen bg-gray-900 flex items-center justify-center px-5 py-5"
+      class="min-w-screen min-h-screen flex items-center justify-center px-5 py-5"
     >
       <div
         class="bg-gray-100 text-gray-500 rounded-3xl shadow-xl w-full overflow-hidden"
@@ -35,13 +37,17 @@
             class="w-full md:w-1/2 py-10 px-5 md:px-10 flex-col justify-between"
           >
             <div class="text-center mb-10">
-              <h1 class="font-bold text-3xl mb-3 text-gray-900">로그인</h1>
+              <h1 class="font-bold text-3xl text-gray-900">로그인</h1>
             </div>
-            <div class="flex -mx-3">
+            <div class="flex -mx-3 input-wrapper" id="account-wrapper">
               <div class="w-full px-3 mb-4">
-                <label for="" class="text-base font-semibold px-1"
-                  >등록번호</label
-                >
+                <div class="flex justify-between">
+                  <label
+                    for="account-input"
+                    class="text-base font-semibold px-1"
+                    >등록번호</label
+                  ><span class="notification"> </span>
+                </div>
                 <div class="flex">
                   <div
                     class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
@@ -53,13 +59,18 @@
                     name="account"
                     class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
                     placeholder="등록번호를 입력해주세요"
+                    id="account-input"
                   />
                 </div>
               </div>
             </div>
-            <div class="flex -mx-3">
+            <div class="flex -mx-3 input-wrapper" id="name-wrapper">
               <div class="w-full px-3 mb-4">
-                <label for="" class="text-base font-semibold px-1">성함</label>
+                <div class="flex justify-between">
+                  <label for="name-input" class="text-base font-semibold px-1"
+                    >성함</label
+                  ><span class="notification"> </span>
+                </div>
                 <div class="flex">
                   <div
                     class="w-10 z-10 pl-1 text-center pointer-events-none flex items-center justify-center"
@@ -71,8 +82,9 @@
                   <input
                     type="text"
                     name="name"
-                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300 required:border-red-300"
+                    class="w-full -ml-10 pl-10 pr-3 py-2 rounded-lg border-2 border-gray-200 outline-none focus:border-blue-300"
                     placeholder="성함을 입력해주세요"
+                    id="name-input"
                   />
                 </div>
               </div>
